// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemTopCard > should match snapshot as album 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative flex h-full w-full flex-col justify-start gap-2"
      >
        <header
          class="m-0 flex w-full flex-col items-center gap-2 p-0"
        >
          <div
            class="rounded-xl p-1"
          >
            <img
              alt="Album 1"
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="164"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
              style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
              width="164"
            />
          </div>
          <div
            class="flex flex-col items-center"
          >
            <a
              class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
              href="/artist/undefined"
            >
              <p
                class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
              >
                Album 1
              </p>
            </a>
          </div>
          <div
            class="flex w-full flex-col items-center justify-center gap-4"
          >
            <div
              class="mt-4 flex w-full flex-row justify-center gap-1"
            />
          </div>
        </header>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative flex h-full w-full flex-col justify-start gap-2"
    >
      <header
        class="m-0 flex w-full flex-col items-center gap-2 p-0"
      >
        <div
          class="rounded-xl p-1"
        >
          <img
            alt="Album 1"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="164"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
            style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
            width="164"
          />
        </div>
        <div
          class="flex flex-col items-center"
        >
          <a
            class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
            href="/artist/undefined"
          >
            <p
              class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
            >
              Album 1
            </p>
          </a>
        </div>
        <div
          class="flex w-full flex-col items-center justify-center gap-4"
        >
          <div
            class="mt-4 flex w-full flex-row justify-center gap-1"
          />
        </div>
      </header>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemTopCard > should match snapshot as artist 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative flex h-full w-full flex-col justify-start gap-2"
      >
        <header
          class="m-0 flex w-full flex-col items-center gap-2 p-0"
        >
          <div
            class="rounded-xl p-1"
          >
            <img
              alt="Darkthrone"
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="164"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
              style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
              width="164"
            />
          </div>
          <div
            class="flex flex-col items-center"
          >
            <a
              class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
              href="/artist/123"
            >
              <p
                class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
              >
                Darkthrone
              </p>
            </a>
          </div>
          <div
            class="flex w-full flex-col items-center justify-center gap-4"
          >
            <div
              class="flex h-full flex-wrap justify-center gap-2 flex-row"
            >
              <div
                class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary shadow hover:bg-primary/80 text-primary-foreground/80"
              >
                pop
              </div>
              <div
                class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary shadow hover:bg-primary/80 text-primary-foreground/80"
              >
                rock
              </div>
              <div
                class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary shadow hover:bg-primary/80 text-primary-foreground/80"
              >
                rap
              </div>
            </div>
            <div
              class="mt-4 flex w-full flex-row justify-center gap-1"
            />
          </div>
        </header>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative flex h-full w-full flex-col justify-start gap-2"
    >
      <header
        class="m-0 flex w-full flex-col items-center gap-2 p-0"
      >
        <div
          class="rounded-xl p-1"
        >
          <img
            alt="Darkthrone"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="164"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
            style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
            width="164"
          />
        </div>
        <div
          class="flex flex-col items-center"
        >
          <a
            class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
            href="/artist/123"
          >
            <p
              class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
            >
              Darkthrone
            </p>
          </a>
        </div>
        <div
          class="flex w-full flex-col items-center justify-center gap-4"
        >
          <div
            class="flex h-full flex-wrap justify-center gap-2 flex-row"
          >
            <div
              class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary shadow hover:bg-primary/80 text-primary-foreground/80"
            >
              pop
            </div>
            <div
              class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary shadow hover:bg-primary/80 text-primary-foreground/80"
            >
              rock
            </div>
            <div
              class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary shadow hover:bg-primary/80 text-primary-foreground/80"
            >
              rap
            </div>
          </div>
          <div
            class="mt-4 flex w-full flex-row justify-center gap-1"
          />
        </div>
      </header>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemTopCard > should match snapshot as top 2 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative flex h-full w-full flex-col justify-start gap-2 -top-8 lg:-top-12"
      >
        <header
          class="m-0 flex w-full flex-col items-center gap-2 p-0"
        >
          <div
            class="rounded-xl p-1"
          >
            <img
              alt="Track 1"
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="164"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
              style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
              width="164"
            />
          </div>
          <div
            class="flex flex-col items-center"
          >
            <a
              class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
              href="/track/123"
            >
              <p
                class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
              >
                Track 1
              </p>
            </a>
            <span>
              <a
                class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
                href="/artist/123"
              >
                Darkthrone
              </a>
            </span>
          </div>
          <div
            class="flex w-full flex-col items-center justify-center gap-4"
          >
            <span
              class="text-center w-[2rem] text-5xl"
            >
              2
            </span>
            <div
              class="mt-4 flex w-full flex-row justify-center gap-1"
            >
              <div>
                <svg
                  class="text-slate-400"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 14px; margin-top: -4px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                    fill="none"
                    stroke-linejoin="round"
                    stroke-width="32"
                  />
                </svg>
              </div>
              <div>
                <svg
                  class="text-slate-400"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 28px; margin-top: -8px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M394 480a16 16 0 0 1-9.39-3L256 383.76 127.39 477a16 16 0 0 1-24.55-18.08L153 310.35 23 221.2a16 16 0 0 1 9-29.2h160.38l48.4-148.95a16 16 0 0 1 30.44 0l48.4 149H480a16 16 0 0 1 9.05 29.2L359 310.35l50.13 148.53A16 16 0 0 1 394 480z"
                  />
                </svg>
              </div>
              <div>
                <svg
                  class="text-slate-400"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 42px; margin-top: -12px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M394 480a16 16 0 0 1-9.39-3L256 383.76 127.39 477a16 16 0 0 1-24.55-18.08L153 310.35 23 221.2a16 16 0 0 1 9-29.2h160.38l48.4-148.95a16 16 0 0 1 30.44 0l48.4 149H480a16 16 0 0 1 9.05 29.2L359 310.35l50.13 148.53A16 16 0 0 1 394 480z"
                  />
                </svg>
              </div>
              <div>
                <svg
                  class="text-slate-400"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 28px; margin-top: -8px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M394 480a16 16 0 0 1-9.39-3L256 383.76 127.39 477a16 16 0 0 1-24.55-18.08L153 310.35 23 221.2a16 16 0 0 1 9-29.2h160.38l48.4-148.95a16 16 0 0 1 30.44 0l48.4 149H480a16 16 0 0 1 9.05 29.2L359 310.35l50.13 148.53A16 16 0 0 1 394 480z"
                  />
                </svg>
              </div>
              <div>
                <svg
                  class="text-slate-400"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 14px; margin-top: -4px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                    fill="none"
                    stroke-linejoin="round"
                    stroke-width="32"
                  />
                </svg>
              </div>
            </div>
          </div>
        </header>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative flex h-full w-full flex-col justify-start gap-2 -top-8 lg:-top-12"
    >
      <header
        class="m-0 flex w-full flex-col items-center gap-2 p-0"
      >
        <div
          class="rounded-xl p-1"
        >
          <img
            alt="Track 1"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="164"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
            style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
            width="164"
          />
        </div>
        <div
          class="flex flex-col items-center"
        >
          <a
            class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
            href="/track/123"
          >
            <p
              class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
            >
              Track 1
            </p>
          </a>
          <span>
            <a
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
              href="/artist/123"
            >
              Darkthrone
            </a>
          </span>
        </div>
        <div
          class="flex w-full flex-col items-center justify-center gap-4"
        >
          <span
            class="text-center w-[2rem] text-5xl"
          >
            2
          </span>
          <div
            class="mt-4 flex w-full flex-row justify-center gap-1"
          >
            <div>
              <svg
                class="text-slate-400"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 14px; margin-top: -4px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                  fill="none"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </div>
            <div>
              <svg
                class="text-slate-400"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 28px; margin-top: -8px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M394 480a16 16 0 0 1-9.39-3L256 383.76 127.39 477a16 16 0 0 1-24.55-18.08L153 310.35 23 221.2a16 16 0 0 1 9-29.2h160.38l48.4-148.95a16 16 0 0 1 30.44 0l48.4 149H480a16 16 0 0 1 9.05 29.2L359 310.35l50.13 148.53A16 16 0 0 1 394 480z"
                />
              </svg>
            </div>
            <div>
              <svg
                class="text-slate-400"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 42px; margin-top: -12px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M394 480a16 16 0 0 1-9.39-3L256 383.76 127.39 477a16 16 0 0 1-24.55-18.08L153 310.35 23 221.2a16 16 0 0 1 9-29.2h160.38l48.4-148.95a16 16 0 0 1 30.44 0l48.4 149H480a16 16 0 0 1 9.05 29.2L359 310.35l50.13 148.53A16 16 0 0 1 394 480z"
                />
              </svg>
            </div>
            <div>
              <svg
                class="text-slate-400"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 28px; margin-top: -8px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M394 480a16 16 0 0 1-9.39-3L256 383.76 127.39 477a16 16 0 0 1-24.55-18.08L153 310.35 23 221.2a16 16 0 0 1 9-29.2h160.38l48.4-148.95a16 16 0 0 1 30.44 0l48.4 149H480a16 16 0 0 1 9.05 29.2L359 310.35l50.13 148.53A16 16 0 0 1 394 480z"
                />
              </svg>
            </div>
            <div>
              <svg
                class="text-slate-400"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 14px; margin-top: -4px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                  fill="none"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </div>
          </div>
        </div>
      </header>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemTopCard > should match snapshot as top 3 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative flex h-full w-full flex-col justify-start gap-2"
      >
        <header
          class="m-0 flex w-full flex-col items-center gap-2 p-0"
        >
          <div
            class="rounded-xl p-1"
          >
            <img
              alt="Track 1"
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="164"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
              style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
              width="164"
            />
          </div>
          <div
            class="flex flex-col items-center"
          >
            <a
              class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
              href="/track/123"
            >
              <p
                class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
              >
                Track 1
              </p>
            </a>
            <span>
              <a
                class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
                href="/artist/123"
              >
                Darkthrone
              </a>
            </span>
          </div>
          <div
            class="flex w-full flex-col items-center justify-center gap-4"
          >
            <span
              class="text-center w-[2rem] text-5xl"
            >
              3
            </span>
            <div
              class="mt-4 flex w-full flex-row justify-center gap-1"
            >
              <div>
                <svg
                  class="text-yellow-900"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 14px; margin-top: -4px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                    fill="none"
                    stroke-linejoin="round"
                    stroke-width="32"
                  />
                </svg>
              </div>
              <div>
                <svg
                  class="text-yellow-900"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 28px; margin-top: -8px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                    fill="none"
                    stroke-linejoin="round"
                    stroke-width="32"
                  />
                </svg>
              </div>
              <div>
                <svg
                  class="text-yellow-900"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 42px; margin-top: -12px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M394 480a16 16 0 0 1-9.39-3L256 383.76 127.39 477a16 16 0 0 1-24.55-18.08L153 310.35 23 221.2a16 16 0 0 1 9-29.2h160.38l48.4-148.95a16 16 0 0 1 30.44 0l48.4 149H480a16 16 0 0 1 9.05 29.2L359 310.35l50.13 148.53A16 16 0 0 1 394 480z"
                  />
                </svg>
              </div>
              <div>
                <svg
                  class="text-yellow-900"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 28px; margin-top: -8px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                    fill="none"
                    stroke-linejoin="round"
                    stroke-width="32"
                  />
                </svg>
              </div>
              <div>
                <svg
                  class="text-yellow-900"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="font-size: 14px; margin-top: -4px;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                    fill="none"
                    stroke-linejoin="round"
                    stroke-width="32"
                  />
                </svg>
              </div>
            </div>
          </div>
        </header>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative flex h-full w-full flex-col justify-start gap-2"
    >
      <header
        class="m-0 flex w-full flex-col items-center gap-2 p-0"
      >
        <div
          class="rounded-xl p-1"
        >
          <img
            alt="Track 1"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="164"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
            style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
            width="164"
          />
        </div>
        <div
          class="flex flex-col items-center"
        >
          <a
            class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
            href="/track/123"
          >
            <p
              class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
            >
              Track 1
            </p>
          </a>
          <span>
            <a
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
              href="/artist/123"
            >
              Darkthrone
            </a>
          </span>
        </div>
        <div
          class="flex w-full flex-col items-center justify-center gap-4"
        >
          <span
            class="text-center w-[2rem] text-5xl"
          >
            3
          </span>
          <div
            class="mt-4 flex w-full flex-row justify-center gap-1"
          >
            <div>
              <svg
                class="text-yellow-900"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 14px; margin-top: -4px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                  fill="none"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </div>
            <div>
              <svg
                class="text-yellow-900"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 28px; margin-top: -8px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                  fill="none"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </div>
            <div>
              <svg
                class="text-yellow-900"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 42px; margin-top: -12px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M394 480a16 16 0 0 1-9.39-3L256 383.76 127.39 477a16 16 0 0 1-24.55-18.08L153 310.35 23 221.2a16 16 0 0 1 9-29.2h160.38l48.4-148.95a16 16 0 0 1 30.44 0l48.4 149H480a16 16 0 0 1 9.05 29.2L359 310.35l50.13 148.53A16 16 0 0 1 394 480z"
                />
              </svg>
            </div>
            <div>
              <svg
                class="text-yellow-900"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 28px; margin-top: -8px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                  fill="none"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </div>
            <div>
              <svg
                class="text-yellow-900"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="font-size: 14px; margin-top: -4px;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M480 208H308L256 48l-52 160H32l140 96-54 160 138-100 138 100-54-160z"
                  fill="none"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </div>
          </div>
        </div>
      </header>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemTopCard > should match snapshot as track 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative flex h-full w-full flex-col justify-start gap-2"
      >
        <header
          class="m-0 flex w-full flex-col items-center gap-2 p-0"
        >
          <div
            class="rounded-xl p-1"
          >
            <img
              alt="Track 1"
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="164"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
              style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
              width="164"
            />
          </div>
          <div
            class="flex flex-col items-center"
          >
            <a
              class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
              href="/track/123"
            >
              <p
                class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
              >
                Track 1
              </p>
            </a>
            <span>
              <a
                class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
                href="/artist/123"
              >
                Darkthrone
              </a>
            </span>
          </div>
          <div
            class="flex w-full flex-col items-center justify-center gap-4"
          >
            <div
              class="mt-4 flex w-full flex-row justify-center gap-1"
            />
          </div>
        </header>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative flex h-full w-full flex-col justify-start gap-2"
    >
      <header
        class="m-0 flex w-full flex-col items-center gap-2 p-0"
      >
        <div
          class="rounded-xl p-1"
        >
          <img
            alt="Track 1"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="164"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
            style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
            width="164"
          />
        </div>
        <div
          class="flex flex-col items-center"
        >
          <a
            class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
            href="/track/123"
          >
            <p
              class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
            >
              Track 1
            </p>
          </a>
          <span>
            <a
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
              href="/artist/123"
            >
              Darkthrone
            </a>
          </span>
        </div>
        <div
          class="flex w-full flex-col items-center justify-center gap-4"
        >
          <div
            class="mt-4 flex w-full flex-row justify-center gap-1"
          />
        </div>
      </header>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemTopCard > should match snapshot as track with play time 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative flex h-full w-full flex-col justify-start gap-2"
      >
        <header
          class="m-0 flex w-full flex-col items-center gap-2 p-0"
        >
          <div
            class="rounded-xl p-1"
          >
            <img
              alt="Track 1"
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="164"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
              style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
              width="164"
            />
          </div>
          <div
            class="flex flex-col items-center"
          >
            <a
              class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
              href="/track/123"
            >
              <p
                class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
              >
                Track 1
              </p>
            </a>
            <span>
              <a
                class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
                href="/artist/123"
              >
                Darkthrone
              </a>
            </span>
          </div>
          <div
            class="flex w-full flex-col items-center justify-center gap-4"
          >
            <div
              class="mt-4 flex w-full flex-row justify-center gap-1"
            >
              <div
                class="relative w-full"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="relative rounded-full w-full h-7 bg-primary *:bg-[linear-gradient(to_top_right,#9400d5,#1e89ee)] overflow-hidden *:skew-x-12 *:transition-all *:duration-700 *:ease-in-out"
                  data-max="100"
                  data-state="indeterminate"
                  role="progressbar"
                >
                  <div
                    class="h-full w-full flex-1 bg-primary transition-all"
                    data-max="100"
                    data-state="indeterminate"
                    style="transform: translateX(-100%) skewX(-12deg);"
                  />
                </div>
                <div
                  class="absolute top-[2px] left-[15px]"
                >
                  1s
                </div>
              </div>
            </div>
          </div>
        </header>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative flex h-full w-full flex-col justify-start gap-2"
    >
      <header
        class="m-0 flex w-full flex-col items-center gap-2 p-0"
      >
        <div
          class="rounded-xl p-1"
        >
          <img
            alt="Track 1"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="164"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
            style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
            width="164"
          />
        </div>
        <div
          class="flex flex-col items-center"
        >
          <a
            class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
            href="/track/123"
          >
            <p
              class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
            >
              Track 1
            </p>
          </a>
          <span>
            <a
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
              href="/artist/123"
            >
              Darkthrone
            </a>
          </span>
        </div>
        <div
          class="flex w-full flex-col items-center justify-center gap-4"
        >
          <div
            class="mt-4 flex w-full flex-row justify-center gap-1"
          >
            <div
              class="relative w-full"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="relative rounded-full w-full h-7 bg-primary *:bg-[linear-gradient(to_top_right,#9400d5,#1e89ee)] overflow-hidden *:skew-x-12 *:transition-all *:duration-700 *:ease-in-out"
                data-max="100"
                data-state="indeterminate"
                role="progressbar"
              >
                <div
                  class="h-full w-full flex-1 bg-primary transition-all"
                  data-max="100"
                  data-state="indeterminate"
                  style="transform: translateX(-100%) skewX(-12deg);"
                />
              </div>
              <div
                class="absolute top-[2px] left-[15px]"
              >
                1s
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemTopCard > should match snapshot as track with play time and plays 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative flex h-full w-full flex-col justify-start gap-2"
      >
        <header
          class="m-0 flex w-full flex-col items-center gap-2 p-0"
        >
          <div
            class="rounded-xl p-1"
          >
            <img
              alt="Track 1"
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="164"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
              style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
              width="164"
            />
          </div>
          <div
            class="flex flex-col items-center"
          >
            <a
              class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
              href="/track/123"
            >
              <p
                class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
              >
                Track 1
              </p>
            </a>
            <span>
              <a
                class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
                href="/artist/123"
              >
                Darkthrone
              </a>
            </span>
          </div>
          <div
            class="flex w-full flex-col items-center justify-center gap-4"
          >
            <div
              class="mt-4 flex w-full flex-row justify-center gap-1"
            >
              <div
                class="relative w-full"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="relative rounded-full w-full h-7 bg-primary *:bg-[linear-gradient(to_top_right,#9400d5,#1e89ee)] overflow-hidden *:skew-x-12 *:transition-all *:duration-700 *:ease-in-out"
                  data-max="100"
                  data-state="indeterminate"
                  role="progressbar"
                >
                  <div
                    class="h-full w-full flex-1 bg-primary transition-all"
                    data-max="100"
                    data-state="indeterminate"
                    style="transform: translateX(-100%) skewX(-12deg);"
                  />
                </div>
                <div
                  class="absolute top-[2px] left-[15px]"
                >
                  1s
                </div>
              </div>
            </div>
          </div>
        </header>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative flex h-full w-full flex-col justify-start gap-2"
    >
      <header
        class="m-0 flex w-full flex-col items-center gap-2 p-0"
      >
        <div
          class="rounded-xl p-1"
        >
          <img
            alt="Track 1"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="164"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=384&q=75 2x"
            style="color: transparent; min-height: 164px; max-height: 164px; min-width: 164px; max-width: 164px; object-fit: cover;"
            width="164"
          />
        </div>
        <div
          class="flex flex-col items-center"
        >
          <a
            class="items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg flex justify-start"
            href="/track/123"
          >
            <p
              class="truncate max-w-[220px] sm:max-w-[240px] xl:max-w-[340px] text-2xl"
            >
              Track 1
            </p>
          </a>
          <span>
            <a
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-xl"
              href="/artist/123"
            >
              Darkthrone
            </a>
          </span>
        </div>
        <div
          class="flex w-full flex-col items-center justify-center gap-4"
        >
          <div
            class="mt-4 flex w-full flex-row justify-center gap-1"
          >
            <div
              class="relative w-full"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="relative rounded-full w-full h-7 bg-primary *:bg-[linear-gradient(to_top_right,#9400d5,#1e89ee)] overflow-hidden *:skew-x-12 *:transition-all *:duration-700 *:ease-in-out"
                data-max="100"
                data-state="indeterminate"
                role="progressbar"
              >
                <div
                  class="h-full w-full flex-1 bg-primary transition-all"
                  data-max="100"
                  data-state="indeterminate"
                  style="transform: translateX(-100%) skewX(-12deg);"
                />
              </div>
              <div
                class="absolute top-[2px] left-[15px]"
              >
                1s
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
